test/lit/vmi_new/vmi_to_vpto_vcadd_i16_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not pto-test-opt %s -vmi-to-vpto 2>&1 | FileCheck %s

// VPTO hardware pto.vcadd only supports i32 for integer elements.
// The VMI vcadd accepts i16 but lowering fails at the VPTO verifier.
module {
  func.func @vmi_to_vpto_vcadd_i16_unsupported(
      %source: !pto.vmi.vreg<128xi16, #pto.vmi.layout<contiguous>>,
      %mask: !pto.vmi.mask<128xb16, #pto.vmi.layout<contiguous>>)
      -> !pto.vreg<128xi16> {
    %out = pto.vmi.vcadd %source, %mask
        : !pto.vmi.vreg<128xi16, #pto.vmi.layout<contiguous>>,
          !pto.vmi.mask<128xb16, #pto.vmi.layout<contiguous>>
        -> !pto.vmi.vreg<1xi16, #pto.vmi.layout<contiguous>>
    %part = "pto.vmi.unpack"(%out)
        : (!pto.vmi.vreg<1xi16, #pto.vmi.layout<contiguous>>)
        -> !pto.vreg<128xi16>
    return %part : !pto.vreg<128xi16>
  }
}

// CHECK: error: {{.*}}vcadd{{.*}}i32{{.*}}i16
